# deltex-python

./: .gitignore  README.md  integration_test.py  pyproject.toml
deltex/: __init__.py  async_client.py  cli.py  client.py
