[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deltex"
version = '1.3.0'
description = "Official Python client for Deltex — edge-native SQL database"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["deltex", "sql", "database", "edge"]
dependencies = []

[project.scripts]
deltex = "deltex.cli:main"

[project.urls]
Homepage = "https://deltex.dev"
Repository = "https://github.com/deltex/deltex-python"

[tool.hatch.build.targets.wheel]
packages = ["deltex"]
